website/js/css/custom.css
/* ... */
.Variant-detail-title {
    margin: 20px;
    white-space: nowrap;
}

.glyphicon.help {
    margin: 3px;
    cursor: pointer;
    z-index: 10;
}
.sources-fields label {
    width: 7.5em;
}

.avatar {
    width: 120px;
    max-height: 120px;
    object-fit: cover;
}

#enigma-logo {
    height: 100px;
    float: left;
    padding-right: 30px;
}

/* image captions that match the width of the image */
.image-with-caption {
    display: table;
}

.image-caption {
    display: table-caption;
    caption-side: bottom;
}

/* prevent overflow on small screens */
.image-with-caption img {
    max-width: 100%;
}

/**************************************************************/
/*****              FAQ                   *********************/
/**************************************************************/

.faq-question {
    cursor: pointer;
}


/**************************************************************/
/**********      Community                *********************/
/**************************************************************/

.community-message {
    font-weight: 200;
}

#communityMap {
    width: 100%;
    height: 450px;
    margin: 20px auto 20px auto;
}

#communityMap .map-info-window div {
    float: right;
}

#communityMap .map-legend {
    position: relative;
    background-color: white;
    margin-top: 10px;
    margin-right: 10px;
    padding: 8px;
    border-radius: 2px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
}

#communityMap .map-legend .map-legend-row {
    padding: 4px 0 18px 0;
    margin-left: 15px;
}

#communityMap .map-legend .map-legend-col {
    float: left;
    width: 33.3333333%;
    padding: 0 1px 0 1px;
}

#communityMap .map-legend-col img {
    padding: 1px;
    border-radius: 8px;
    border: 1px solid white;
}

#communityMap .map-legend-col.selected img {
    border: 1px solid black;
}

#communityMap .map-legend-icon {
    height: 20px;
}

#communityMap .map-legend .map-legend-full {
    width: 464px;
}

#communityMap .map-legend .map-legend-slide {
    background-color: white;
    padding: 0;
    border-radius: 2px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
    position: absolute;
    z-index: 10;
    top: 0px;
    right: 0px;
    max-width: 0;
    max-height: 0;
    overflow: hidden;
    visibility: hidden;
}

#communityMap .map-legend:hover .map-legend-slide {
    max-width: 500px;
    max-height: 500px;
    padding: 8px;
    visibility: visible;
    transition: max-width 0.5s, padding-left 0.5s, padding-right 0.5s;
}

#communityMap .avatar {
    height: 90px;
    width: 90px;
    float: left;
    margin-right: 15px;
    background-color: #f5f5f5;
    border: 1px solid #ddd;
    padding: 4px;
}

.caret {
    border-top: 4px dashed;
}

.slide-fade-in {
    overflow: hidden;
    animation-duration: 1s;
    animation-name: slide-fade-in;
    border-radius: 10px;
}

@keyframes slide-fade-in {
    from {
        max-height: 0px;
        opacity: 0;
    }
    to {
        max-height: 100px;
        opacity: 1;
    }
}

/**************************************************************/
/**********     Versioning                *********************/
/**************************************************************/

.release-notes {
    white-space: pre-line;
}


/**************************************************************/
/**********     Variant Details: Tile Groups ******************/
/**************************************************************/

div.variant-detail-group table.table-bordered {
    border: solid 1px #9a9a9a;
}

div.variant-detail-group table.table-bordered td {
    border: none;
    border-bottom: solid 1px #ccc;
}

div.variant-detail-group table td.help-target {
    font-weight: bold;
    text-align: right;
    text-decoration: dashed;
    width: 200px;
}

div.variant-detail-group .panel table {
    margin-bottom: 10px;
}

span.help-target-inline {
    border-bottom: dotted 1px gray;
    cursor: help;
}

div.variant-detail-group table.table-bordered {
    border-top: solid 5px #777777;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
}

/* hide empty variant information client-side */
div.variant-detail-group .variantfield-empty {
    display: none;
}

/* overrides bootstrap's min-height so empty groups can be completely hidden */
div.variant-detail-group {
    min-height: 0;
}

div.variant-detail-group .group-empty {
    display: none;
}

div.variant-detail-group table {
    table-layout: fixed;
}

/* special panel styling */

.isogrid {
    /* makes isogrid line up with bootstrap's columns; it ordinarily wouldn't due to its gutter option */
    margin-left: -10px;
    margin-right: -10px;
}

div.variant-detail-group .panel {
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
}

div.variant-detail-group .panel-heading {
    padding-right: 10px;
}
div.variant-detail-group .panel-title {
    display: flex;
    flex-direction: row;
}
div.variant-detail-group .panel-title .title {
    flex: 1 0 auto;
}

div.variant-detail-group .panel-help-btn {
    color: #e2e2e2;
    margin-left: 10px;
    font-size: 20px;
    z-index: 100;
}

div.variant-detail-group:hover .panel-help-btn {
    color: #c3c3c3;
}

div.variant-detail-group .panel-body {
    padding: 0;
    background-color: white;
}

div.variant-details-body {
    margin-top: 2em;
}


/* --- transcript viz. -------------- */

.selected-ci-path {
    stroke: black;
    stroke-width: 2px;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-dasharray: 4;

    animation: dash 4s linear infinite;
}

@keyframes dash {
    to {
        stroke-dashoffset: 80px;
    }
}

.splicing-domain-list {
    display: block;
}
.splicing-domain-list > li {
    display: inline-block;
    zoom: 1;
    *display: inline;
}
.splicing-domain-list > li > a { cursor: pointer; }
.splicing-domain-list > li:after {
    content: ', ';
    margin-right: 0.2em
}
.splicing-domain-list > li:last-child:after {
    content: '';
}
/* ... */

